ad resposive to contac us image

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <h2>Level Up Your Skil
                     we help you to Apply,
                     more than 100 University</h2>
-                    <button>
+                    <button class="contactus-btn">
                         contact us
                     </button>
             </div>
