ajout de section about et mission

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     </div>
     </section>
 
-    <section id="about">
+    <section id="services">
         <div class="our-service">
-        <h2>Our Services</h2>
+        <h1>Our Services</h1>
         <div class="slider-navigation">
             <button onclick="prevSlide()"><</button>
             <button onclick="nextSlide()">></button>
@@ -188,7 +188,7 @@
         </div>
     </section>
 
-    <section id="services">
+    <section id="">
         <div class="levelup">
             <img src="./src/iog.png" alt="Card Image 2">
             <div class="leveup-text">
@@ -202,11 +202,32 @@
         </div>
     </section>
 
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>Get in touch with us.</p>
+    <section id="about">
+      <div class="text-div">
+        <h1>Our Mission</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum aut necessitatibus minima labore neque atque, et libero optio hic quasi inventore molestiae! Expedita nulla suscipit asperiores totam rerum culpa esse at facilis, voluptatibus corporis veniam fuga animi autem incidunt quos. Cum error esse dolorem tempore molestiae, magnam hic necessitatibus ad ullam temporibus reiciendis nam quod sit distinctio, ex, ut doloribus doloremque consequuntur? Iure mollitia voluptas vitae obcaecati illo sunt dolores minus nihil quo beatae placeat, nemo natus error iusto saepe numquam, eligendi expedita quis. Unde facilis velit fugit ex minus, aspernatur, illum aliquam sit nam aperiam consequatur repellat perferendis quibusdam!</p></div>
     </section>
+    <section id="contact">
+      <div class="text-div">
+        <h1>About Us</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum aut necessitatibus minima labore neque atque, et libero optio hic quasi inventore molestiae! Expedita nulla suscipit asperiores totam rerum culpa esse at facilis, voluptatibus corporis veniam fuga animi autem incidunt quos. Cum error esse dolorem tempore molestiae, magnam hic necessitatibus ad ullam temporibus reiciendis nam quod sit distinctio, ex, ut doloribus doloremque consequuntur? Iure mollitia voluptas vitae obcaecati illo sunt dolores minus nihil quo beatae placeat, nemo natus error iusto saepe numquam, eligendi expedita quis. Unde facilis velit fugit ex minus, aspernatur, illum aliquam sit nam aperiam consequatur repellat perferendis quibusdam!</p></div>
+    </section>
+    <section id="">
+      <div class="levelup">
+          <img src="./src/iod.png" alt="Card Image 2">
+          <div class="leveup-text">
+              <h2>Best quality electronic
+                device at an affordable 
+                price</h2>
+                  <button class="contactus-btn">
+                    Order a device
+                  </button>
+          </div>
+      </div>
+  </section>
+  <section>
 
+  </section>
     <footer>
         <p>&copy; 2023 NAH I. MANA</p>
     </footer>
