--- a/test.html
+++ b/test.html
@@ -3,209 +3,82 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Infinite Card Slider</title>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      font-family: Arial, sans-serif;
+      background-color: black;
+    }
+
+    .parallax-section {
       height: 100vh;
-    }
-    .slider-container {
+      overflow: hidden;
       position: relative;
-      overflow: hidden;
-      width: 80%;
-      max-width: 1200px;
-      margin: 20px 0;
+      perspective: 1px;
+      perspective-origin: 0 0;
     }
-    .slider-wrapper {
-      display: flex;
-      transition: transform 0.5s ease-in-out;
-      overflow-x: auto;
-      scrollbar-width: thin;
-      scrollbar-color: transparent transparent;
-    }
-    .slider-wrapper::-webkit-scrollbar {
-      width: 8px;
-    }
-    .slider-wrapper::-webkit-scrollbar-thumb {
-      background-color: #888;
-    }
-    .card {
-      width: 300px;
-      margin-right: 20px;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      overflow: hidden;
-    }
-    .card img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-    }
-    .card-body {
-      padding: 15px;
-    }
-    .card-title {
-      font-size: 1.2rem;
-      margin-bottom: 10px;
-    }
-    .card-text {
-      color: #555;
-    }
-    .slider-controls {
+
+    .parallax-layer {
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-position: 50% 50%;
+      background-size: cover;
+      will-change: transform;
     }
-    .slider-controls button {
-      margin-left: 5px;
-      cursor: pointer;
+    
+.layer1 { background-image: url('./src/icons8_Guitar_80px.png'); z-index: -1; }
+    .layer2 { background-image: url('./src/icons8_house_80px.png'); z-index: -2; }
+    .layer3 { background-image: url('./src/icons8_laptop_play_video_80px.png'); z-index: -3; }
+    .layer4 { background-image: url('./src/icons8_Plane_64px.png'); z-index: -4; }
+
+    .parallax-layer::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.5);
+    }
+
+    .content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      color: #fff;
+      z-index: 1;
     }
   </style>
+  <script>
+    $(document).ready(function() {
+      $(window).scroll(function() {
+        var scrollTop = $(this).scrollTop();
+        $('.parallax-layer').css('transform', 'translate3d(0,' + scrollTop * -0.5 + 'px, 0)');
+      });
+    });
+  </script>
 </head>
 <body>
 
-  <div class="slider-container">
-    <div class="slider-controls">
-      <button onclick="prevSlide()">Prev</button>
-      <button onclick="nextSlide()">Next</button>
-    </div>
-    <div class="slider-wrapper" id="cardSlider" onscroll="scrollHandler(event)">
-      <div class="card">
-        <img src="https://placekitten.com/300/150" alt="Card Image 1">
-        <div class="card-body">
-          <h2 class="card-title">Card 1</h2>
-          <p class="card-text">Some example text.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://placekitten.com/301/150" alt="Card Image 2">
-        <div class="card-body">
-          <h2 class="card-title">Card 2</h2>
-          <p class="card-text">Some example text.</p>
-        </div>
-      </div>
-      <!-- Add more cards as needed -->
-      <div class="card">
-        <img src="https://placekitten.com/300/150" alt="Card Image 1">
-        <div class="card-body">
-          <h2 class="card-title">Card 1</h2>
-          <p class="card-text">Some example text.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://placekitten.com/301/150" alt="Card Image 2">
-        <div class="card-body">
-          <h2 class="card-title">Card 2</h2>
-          <p class="card-text">Some example text.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://placekitten.com/300/150" alt="Card Image 1">
-        <div class="card-body">
-          <h2 class="card-title">Card 1</h2>
-          <p class="card-text">Some example text.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://placekitten.com/301/150" alt="Card Image 2">
-        <div class="card-body">
-          <h2 class="card-title">Card 2</h2>
-          <p class="card-text">Some example text.</p>
-        </div>
-      </div>
-    </div>
+<div class="parallax-section">
+  <div class="parallax-layer layer1"></div>
+  <div class="parallax-layer layer2"></div>
+  <div class="parallax-layer layer3"></div>
+  <div class="parallax-layer layer4"></div>
+  
+
+  <div class="content">
+    <h1>Effet de parallaxe</h1>
+    <p>Ceci est un exemple d'effet de parallaxe avec quatre images PNG.</p>
   </div>
-
-  <script>
-    const slider = document.getElementById('cardSlider');
-    let currentIndex = 0;
-
-    function showCard(index) {
-      const cardWidth = document.querySelector('.card').offsetWidth + 20;
-      const newPosition = -index * cardWidth;
-      slider.style.transform = `translateX(${newPosition}px)`;
-    }
-
-    function cloneAndAppend() {
-      const firstCard = document.querySelector('.card');
-      const clone = firstCard.cloneNode(true);
-      document.querySelector('.slider-wrapper').appendChild(clone);
-    }
-
-    cloneAndAppend();
-
-    function autoSlide() {
-      currentIndex++;
-      const cardCount = document.querySelectorAll('.card').length;
-      if (currentIndex >= cardCount - 3) {
-        currentIndex = 0;
-        slider.style.transition = 'none';
-        slider.style.transform = 'translateX(0)';
-        setTimeout(() => {
-          slider.style.transition = '';
-        }, 0);
-      }
-      showCard(currentIndex);
-    }
-
-    setInterval(autoSlide, 3000);
-
-    function nextSlide() {
-      currentIndex++;
-      const cardCount = document.querySelectorAll('.card').length;
-      if (currentIndex >= cardCount - 3) {
-        currentIndex = 0;
-      }
-      showCard(currentIndex);
-    }
-
-    function prevSlide() {
-      currentIndex--;
-      if (currentIndex < 0) {
-        const cardCount = document.querySelectorAll('.card').length;
-        currentIndex = cardCount - 4;
-      }
-      showCard(currentIndex);
-    }
-
-    function scrollHandler(event) {
-      // Determine scroll direction
-      const delta = Math.max(-1, Math.min(1, (event.deltaY || -event.detail)));
-      
-      // Scroll right
-      if (delta > 0) {
-        nextSlide();
-      }
-      // Scroll left
-      else {
-        prevSlide();
-      }
-
-      // Prevent default scroll behavior
-      event.preventDefault();
-    }
-    function touchMoveHandler(event) {
-      touchEndX = event.touches[0].clientX;
-    }
-
-    function touchEndHandler() {
-      const touchDelta = touchEndX - touchStartX;
-      if (Math.abs(touchDelta) > 50) {
-        if (touchDelta > 0) {
-          prevSlide();
-        } else {
-          nextSlide();
-        }
-      }
-    }
-  </script>
+</div>
 
 </body>
 </html>
-git submodule add https://github.com/albin488/nah
