ajout nare svg pading

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
 
         <div class="card">
-            <div class="user">
+            <div class="user nare">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26 26">
                     <path fill="none" stroke="#FF0000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21.9 9.1L22 24 4 24 4 9" />
                     <path d="M1 12L13 4.2 25 12 25 9 13 1 1 9z" fill="#FF0000" />
