--- a/test.html
+++ b/test.html
@@ -3,82 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: Arial, sans-serif;
-      background-color: black;
     }
 
-    .parallax-section {
-      height: 100vh;
-      overflow: hidden;
+    .image-grid {
+      gap: 16px;
+      padding: 16px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr); 
+    }
+
+    .image-item {
       position: relative;
-      perspective: 1px;
-      perspective-origin: 0 0;
+      overflow: hidden;
+      border-radius: 8px;
     }
 
-    .parallax-layer {
-      position: absolute;
-      top: 0;
-      left: 0;
+    .image-item img {
       width: 100%;
-      height: 100%;
-      background-position: 50% 50%;
-      background-size: cover;
-      will-change: transform;
-    }
-    
-.layer1 { background-image: url('./src/icons8_Guitar_80px.png'); z-index: -1; }
-    .layer2 { background-image: url('./src/icons8_house_80px.png'); z-index: -2; }
-    .layer3 { background-image: url('./src/icons8_laptop_play_video_80px.png'); z-index: -3; }
-    .layer4 { background-image: url('./src/icons8_Plane_64px.png'); z-index: -4; }
-
-    .parallax-layer::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.5);
-    }
-
-    .content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      color: #fff;
-      z-index: 1;
+      height: auto;
+      display: block;
     }
   </style>
-  <script>
-    $(document).ready(function() {
-      $(window).scroll(function() {
-        var scrollTop = $(this).scrollTop();
-        $('.parallax-layer').css('transform', 'translate3d(0,' + scrollTop * -0.5 + 'px, 0)');
-      });
-    });
-  </script>
+  <title>Responsive Image Grid</title>
 </head>
 <body>
 
-<div class="parallax-section">
-  <div class="parallax-layer layer1"></div>
-  <div class="parallax-layer layer2"></div>
-  <div class="parallax-layer layer3"></div>
-  <div class="parallax-layer layer4"></div>
-  
+  <div class="image-grid">
+    <!-- Image 1 -->
+    <div class="image-item">
+      <img src="https://picsum.photos/id/1015/250/250">
+    </div>
 
-  <div class="content">
-    <h1>Effet de parallaxe</h1>
-    <p>Ceci est un exemple d'effet de parallaxe avec quatre images PNG.</p>
+    <!-- Image 2 -->
+    <div class="image-item">
+      <img src="https://picsum.photos/id/1015/250/250">
+    </div>
+
+    <!-- Image 3 -->
+    <div class="image-item">
+      <img src="https://picsum.photos/id/1015/250/250">
+    </div>
+
+    <!-- Image 4 -->
+    <div class="image-item">
+      <img src="https://picsum.photos/id/1015/250/250">
+    </div>
+
+    <!-- Image 5 -->
+    <div class="image-item">
+      <img src="https://picsum.photos/id/1015/250/250">
+    </div>
+
+    <!-- Image 6 -->
+    <div class="image-item">
+      <img src="https://picsum.photos/id/1015/250/250">
+    </div>
   </div>
-</div>
 
 </body>
 </html>
