change class herocontact to id  nre

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
 
 <body>
 
-    <header class="headercontact">
+    <header >
+      <div class="headercontact">
         <div class="top-menu">
         <div class="menu-toggle">&#9776; Menu</div>
         <div class="menu">
@@ -64,7 +65,7 @@
             </svg>
       </div>
     </div>
-   
+  </div>
     </header>
    <div class="contact-container">
   <div class="contact container shadow" id="contact_form">
