--- a/nre.html
+++ b/nre.html
@@ -38,7 +38,7 @@
                
         </div>
        
-        <div class="hero herocontac">
+        <div class="hero" id="herocontac">
         <div class="titre">
             <div class="recherch">
             <div>
