--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                
         </div>
        
-        <div class="hero herocontac">
+        <div class="hero "id="herocontac">
         <div class="titre">
             <div class="recherch">
             <div>
