--- a/contact.html
+++ b/contact.html
@@ -230,9 +230,9 @@
       <div class="footer-content">
         <div class="menuf">
           <ul>
-            <a href="#about">About Us</a>
+            <a href="https://albin488.github.io/">About Us</a>
             <a href="#services">Services</a>
-            <a href="#contact">Contact</a>
+            <a href="https://albin488.github.io/contact">Contact</a>
         </ul>
         </div>
             <div class="icon">
