--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="https://albin488.github.io/">Home</a></li>
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://albin488.github.io/contact">Contact</a></li>
                 </ul>
             </nav>
             
