add class to contact titre

--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
         <div class="hero " id="herocontac">
         <div class="titre">
             <div class="recherch">
-            <div>
-            <h1>NAH INVESTIMENT</h1>
+            <div class="nre-titre">
+            <h1 >NAH INVESTIMENT</h1>
             <h1>&</h1>
             <h1>MANAGEMENT</h1></div>
           
