--- a/nahe.html
+++ b/nahe.html
@@ -14,8 +14,9 @@
         <div class="top-menu">
         <div class="menu-toggle">&#9776; Menu</div>
         <div class="menu">
-            <div class="logo">NAH .I MANA</div>
-            
+          <div class="gost">
+    
+          </div>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
