--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
         <div class="top-menu">
         <div class="menu-toggle">&#9776; Menu</div>
         <div class="menu">
-            <div class="logo">NAH .I MANA</div>
+          <div class="gost">
+    
+          </div>
             
             <nav>
                 <ul>
